# bundlemanager_bundle_framework

./: 2374.diff.txt  2409.diff.txt  AGENTS.md  BUILD.gn  CLAUDE.md  CODEOWNERS  OAT.xml  README_zh.md  appexecfwk.gni  bundle.json  bundle_hisysevent.yaml  hisysevent.yaml
interfaces/kits/ani/: BUILD.gn  ani_bundle_manager.cpp  ani_config.json  ani_resource_config.json
interfaces/kits/ani/app_control/: BUILD.gn  ani_app_control.cpp  ani_app_control_common.cpp  ani_app_control_common.h  ani_app_control_unsupported.cpp
interfaces/kits/ani/bundle_installer/: BUILD.gn  ani_bundle_installer.cpp
interfaces/kits/ani/bundle_manager/: BUILD.gn  ani_bundle_manager.cpp  ani_bundle_manager.h
interfaces/kits/ani/bundle_monitor/: BUILD.gn  ani_bundle_monitor.cpp  ani_bundle_monitor_callback_handler.cpp  ani_bundle_monitor_event_handler.cpp
interfaces/kits/ani/common/: BUILD.gn  business_error_ani.cpp  business_error_ani.h  common_fun_ani.cpp  common_fun_ani.h  enum_util.h
interfaces/kits/ani/default_app_manager/: BUILD.gn  ani_default_app_manager.cpp  ani_default_app_manager_unsupported.cpp
interfaces/kits/ani/ets/: @ohos.base.ets  @ohos.bundle.bundleManager.ets  @ohos.bundle.bundleResourceManager.ets  AbilityInfo.ets  ApplicationInfo.ets  BundleInfo.ets  BundleManager.ets  ExtensionAbilityInfo.ets  HapModuleInfo.ets  Metadata.ets  Skill.ets  resource.ets
interfaces/kits/ani/freeInstall/: BUILD.gn  ani_free_install.cpp  ani_free_install_unsupported.cpp
interfaces/kits/ani/launcher_bundle_manager/: BUILD.gn  ani_launcher_bundle_manager.cpp  ani_launcher_bundle_manager_unsupported.cpp
interfaces/kits/ani/overlay/: BUILD.gn  ani_overlay.cpp  ani_overlay_unsupported.cpp
interfaces/kits/ani/plugin_manager/: BUILD.gn  ani_plugin_manager.cpp
interfaces/kits/ani/resource_manager/: BUILD.gn  ani_resource_manager.cpp  ani_resource_manager_common.cpp  ani_resource_manager_common.h  ani_resource_manager_convert.cpp  ani_resource_manager_convert.h  ani_resource_manager_unsupport.cpp
interfaces/kits/ani/shortcut_manager/: BUILD.gn  ani_shortcut_manager.cpp
interfaces/kits/ani/skill_manager/: BUILD.gn  ani_skill_manager.cpp
interfaces/kits/ani/zlib/: BUILD.gn  ani_zip.cpp  ani_zip.h  ani_zlib.cpp
test/fuzztest/: BUILD.gn  bms_fuzztest_util.h
test/fuzztest/ShortcutInfo_fuzzer/: ShortcutInfo_fuzzer.cpp
test/fuzztest/applicationinfo_fuzzer/: applicationinfo_fuzzer.cpp
test/fuzztest/bundleinstalldhost_fuzzer/: BUILD.gn
test/fuzztest/bundleinstallerhost_fuzzer/: BUILD.gn
test/fuzztest/bundlemgrhost_fuzzer/: bundlemgrhost_fuzzer.cpp
test/fuzztest/bundlemgrproxy_fuzzer/: bundlemgrproxy_fuzzer.cpp
test/fuzztest/bundlestreaminstallerhost_fuzzer/: bundlestreaminstallerhost_fuzzer.cpp
test/fuzztest/extensionabilityinfo_fuzzer/: extensionabilityinfo_fuzzer.cpp
test/fuzztest/fuzztest_application/addappjumpcontrolrule_fuzzer/: BUILD.gn  addappjumpcontrolrule_fuzzer.cpp  addappjumpcontrolrule_fuzzer.h
test/fuzztest/fuzztest_application/appcontrolhost_fuzzer/: appcontrolhost_fuzzer.cpp
test/fuzztest/fuzztest_application/bundleinstalldhost_fuzzer/: BUILD.gn  bundleinstalldhost_fuzzer.cpp
test/fuzztest/fuzztest_application/bundleinstallerhost_fuzzer/: BUILD.gn
test/fuzztest/fuzztest_application/bundlemgrhost_fuzzer/: bundlemgrhost_fuzzer.cpp
test/fuzztest/fuzztest_application/bundlemgrproxy_fuzzer/: bundlemgrproxy_fuzzer.cpp
test/fuzztest/fuzztest_application/bundleresourcehost_fuzzer/: BUILD.gn  bundleresourcehost_fuzzer.cpp  bundleresourcehost_fuzzer.h
test/fuzztest/fuzztest_application/bundlestreaminstallerhost_fuzzer/: bundlestreaminstallerhost_fuzzer.cpp
test/fuzztest/fuzztest_application/verifymanagerhost_fuzzer/: BUILD.gn  verifymanagerhost_fuzzer.cpp  verifymanagerhost_fuzzer.h
test/fuzztest/fuzztest_bundlemanager/: BUILD.gn
test/fuzztest/fuzztest_bundlemanager/appservicefwkinstallerremoveinfo_fuzzer/: appservicefwkinstallerremoveinfo_fuzzer.cpp  appservicefwkinstallerremoveinfo_fuzzer.h
test/fuzztest/fuzztest_bundlemanager/appservicefwkinstallerrollback_fuzzer/: appservicefwkinstallerrollback_fuzzer.cpp  appservicefwkinstallerrollback_fuzzer.h
test/fuzztest/fuzztest_bundlemanager/appservicefwkinstallersavebundleinfotostorage_fuzzer/: appservicefwkinstallersavebundleinfotostorage_fuzzer.cpp  appservicefwkinstallersavebundleinfotostorage_fuzzer.h
test/fuzztest/fuzztest_bundlemanager/appservicefwkinstallersavepreinstallbundleinfo_fuzzer/: appservicefwkinstallersavepreinstallbundleinfo_fuzzer.cpp  appservicefwkinstallersavepreinstallbundleinfo_fuzzer.h
test/fuzztest/fuzztest_bundlemanager/appservicefwkinstallersendbundlesystemevent_fuzzer/: appservicefwkinstallersendbundlesystemevent_fuzzer.cpp  appservicefwkinstallersendbundlesystemevent_fuzzer.h
test/fuzztest/fuzztest_bundlemanager/appservicefwkinstalleruninstalllowerversion_fuzzer/: appservicefwkinstalleruninstalllowerversion_fuzzer.cpp  appservicefwkinstalleruninstalllowerversion_fuzzer.h
test/fuzztest/fuzztest_bundlemanager/appservicefwkinstallerupdateappservice_fuzzer/: appservicefwkinstallerupdateappservice_fuzzer.cpp  appservicefwkinstallerupdateappservice_fuzzer.h
test/fuzztest/fuzztest_bundlemanager/bmsabilityinfofromjson_fuzzer/: BUILD.gn  bmsabilityinfofromjson_fuzzer.cpp
test/fuzztest/fuzztest_bundlemanager/bmsabilityinfomarshalling_fuzzer/: BUILD.gn  bmsabilityinfomarshalling_fuzzer.cpp
test/fuzztest/fuzztest_bundlemanager/bmsabilityinfounmarshalling_fuzzer/: BUILD.gn  (+1 more)
test/fuzztest/getdefaultapplication_fuzzer/: getdefaultapplication_fuzzer.cpp
test/fuzztest/hapmoduleinfo_fuzzer/: hapmoduleinfo_fuzzer.cpp
test/fuzztest/launcherservice_fuzzer/: BUILD.gn
test/fuzztest/parsesyscap_fuzzer/: parsesyscap_fuzzer.cpp
test/fuzztest/resetdefaultapplication_fuzzer/: resetdefaultapplication_fuzzer.cpp
test/fuzztest/setdefaultapplication_fuzzer/: setdefaultapplication_fuzzer.cpp
test/fuzztest/shortcutinfo_fuzzer/: shortcutinfo_fuzzer.cpp
test/fuzztest/zip_fuzzer/: zip_fuzzer.cpp
test/unittest/bms_dual_mode_load_test/: BUILD.gn  bms_dual_mode_load_test.cpp
(+2321 files in other folders)
