# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "abilityinfofromjson_fuzzer:AbilityInfoFromJsonFuzzTest",
    "abilityinfomarshalling_fuzzer:AbilityInfoMarshallingFuzzTest",
    "abilityinfounmarshalling_fuzzer:AbilityInfoUnmarshallingFuzzTest",
    "addappInstallcontrolrule_fuzzer:AddAppInstallControlRuleFuzzTest",
    "addapprunningcontrolrule_fuzzer:AddAppRunningControlRuleFuzzTest",
    "applicationinfo_fuzzer:ApplicationInfoFuzzTest",
    "applicationinfofromjson_fuzzer:ApplicationInfoFromJsonFuzzTest",
    "bundleinfo_fuzzer:BundleInfoFuzzTest",
    "bundleinfofromjson_fuzzer:BundleInfoFromJsonFuzzTest",
    "bundlesyscap_fuzzer:BundleSysCapFuzzTest",
    "checkissystemappbyuid_fuzzer:CheckIsSystemAppByUidFuzzTest",
    "commonevent_fuzzer:CommonEventFuzzTest",
    "deleteappinstallcontrolrule_fuzzer:DeleteAppInstallControlRuleFuzzTest",
    "deleteapprunningcontrolrule_fuzzer:DeleteAppRunningControlRuleFuzzTest",
    "deletedisposedstatus_fuzzer:DeleteDisposedStatusFuzzTest",
    "elementname_fuzzer:ElementNameFuzzTest",
    "getaccessibleappcodepaths_fuzzer:GetAccessibleAppCodePathsFuzzTest",
    "getappinstallcontrolrule_fuzzer:GetAppInstallControlRuleFuzzTest",
    "getapplicationinfos_fuzzer:GetApplicationInfosFuzzTest",
    "getapprunningcontrolrule_fuzzer:GetAppRunningControlRuleFuzzTest",
    "getbundleinfos_fuzzer:GetBundleInfosFuzzTest",
    "getdisposedstatus_fuzzer:GetDisposedStatusFuzzTest",
    "gethapmoduleinfo_fuzzer:GetHapModuleInfoFuzzTest",
    "getlaunchwantforbundle_fuzzer:GetLaunchWantForBundleFuzzTest",
    "getnameforuid_fuzzer:GetNameForUidFuzzTest",
    "getpermissiondef_fuzzer:GetPermissionDefFuzzTest",
    "getsystemavailablecapabilities_fuzzer:GetSystemAvailableCapabilitiesFuzzTest",
    "getuidbybundlename_fuzzer:GetUidByBundleNameFuzzTest",
    "hassystemcapability_fuzzer:HasSystemCapabilityFuzzTest",
    "installparamunmarshalling_fuzzer:InstallParamUnmarshallingFuzzTest",
    "parsesyscap_fuzzer:ParseSysCapFuzzTest",
    "queryabilityinfo_fuzzer:QueryAbilityInfoFuzzTest",
    "queryabilityinfobyuri_fuzzer:QueryAbilityInfoByUriFuzzTest",
    "queryabilityinfos_fuzzer:QueryAbilityInfosFuzzTest",
    "queryabilityinfosbyuri_fuzzer:QueryAbilityInfosByUriFuzzTest",
    "queryallabilityinfos_fuzzer:QueryAllAbilityInfosFuzzTest",
    "querykeepalivebundleinfos_fuzzer:QueryKeepAliveBundleInfosFuzzTest",
    "setdisposedstatus_fuzzer:SetDisposedStatusFuzzTest",
    "shortcutinfo_fuzzer:ShortcutInfoFuzzTest",
    "switchquickfix_fuzzer:SwitchQuickFixFuzzTest",
    "upgradeatomicservice_fuzzer:UpgradeAtomicServiceFuzzTest",
    "verifycallingpermission_fuzzer:VerifyCallingPermissionFuzzTest",
  ]
}
