# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/bundlemanager/bundle_framework/appexecfwk.gni")

ohos_shared_library("anibundlemanager") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  include_dirs = [
    "${inner_api_path}/appexecfwk_core/include",
    "${kits_path}/js/common",
    "${kits_path}/ani/common",
  ]
  sources = [
    "ani_bundle_manager.cpp",
    "common/common_fun_ani.cpp",
  ]

  deps = [
    "${base_path}:appexecfwk_base",
    "${common_path}:libappexecfwk_common",
    "${core_path}:appexecfwk_core",
    "${kits_path}/js/common:bundle_napi_common",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "ipc:ipc_core",
    "napi:ace_napi",
    "runtime_core:ani",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "bundlemanager"
  part_name = "bundle_framework"
}

generate_static_abc("bundleManager2abc") {
  arktsconfig = "ani_config.json"
  dst_file = "$target_out_dir/BundleManager.abc"
  out_puts = [ "$target_out_dir/BundleManager.abc" ]
}

group("ani_package") {
  deps = [
    ":anibundlemanager",
    ":bundleManager2abc",
  ]
}
