# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../appexecfwk.gni")

module_output_path = "bundle_framework/bundle_framework"

ohos_unittest("BmsDualModeLoadTest") {
  module_out_path = module_output_path
  include_dirs = [
    "${services_path}/bundlemgr/include",
    "${interfaces_path}/inner_api/appexecfwk_base/include",
  ]

  sources = [
    "${services_path}/bundlemgr/src/dual_mode_helper.cpp",
    "bms_dual_mode_load_test.cpp",
  ]

  # Note: This is an integration test for loading classification
  # Actual implementation would require BundleDataMgr and database setup

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${base_path}:appexecfwk_base",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "init:libbegetutil",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":BmsDualModeLoadTest" ]
}
