# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("plugin_installer_test") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "hostBundleTest1:hostBundleTest1",
    "hostBundleTest2:hostBundleTest2",
    "plugin:plugin",
    "pluginV2:pluginV2",
    "pluginWithWrongId:pluginWithWrongId",
    "pluginWithWrongProf:pluginWithWrongProf",
  ]
}
