# Copyright (c) 2023-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../../appexecfwk.gni")

ohos_app("internalOverlayTest4") {
  hap_name = "internalOverlayTest4"
  subsystem_name = "bundlemanager"
  hap_out_dir = "$root_out_dir/tests/systemtest/bundle_framework/bundle_framework/resource/testOverlay/internal/test4"
  testonly = true
  assemble_type = "assembleHsp"
  build_level = "module"
  certificate_profile = "${bundle_framework_path}/test/sceneProject/signature/com.example.internalOverlayTest1.p7b"
}
